src/test/deca/syntax/invalid/classe_mauvaise.deca
// Description:
//    on écit autre chose qu'une méthode ou une classe dans une classe
//
// Resultats:
//   

class A extends {
	3;
}